opam-version: "2.0"
maintainer:   "bobby.priambodo@gmail.com"
authors:      "Bobby Priambodo"
homepage:     "https://github.com/bobbypriambodo/tododb-ocaml/"
bug-reports:  "https://github.com/bobbypriambodo/tododb-ocaml/issues"
dev-repo:     "git+https://github.com/bobbypriambodo/tododb-ocaml.git"
license:      "MIT"

build: [
  ["dune" "subst" "-n" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "ocaml" { >= "4.04.2" }
  "dune" {build}
  "opium"
  "caqti"
  "ezjsonm"
  "caqti-lwt"
  "caqti-driver-postgresql"
  "alcotest" {with-test}
]
